[workspace]
members = ["echo", "echo_macro"]
resolver = "3"


[workspace.dependencies]
godot = { git = "https://github.com/godot-rust/gdext", rev = "869a336fb981f4c676a0ccb6a9422fad95a4138e", features = [

] }
slotmap = "1.0.7"
ahash = "0.8.12"
smallbox = "0.8.8"
nohash-hasher = "0.2.0"
smallvec = "1.15.1"
syn = "2.0.117"
quote = "1.0.40"
proc-macro2 = "1.0.101"
paste = "1.0.15"
either = "1.15.0"
heck = "0.5.0"
