[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { workspace = true }
slotmap = { workspace = true }
ahash = { workspace = true }
smallbox = { workspace = true }
nohash-hasher = { workspace = true }
smallvec = { workspace = true }
echo_macro = { path = "../echo_macro" }
